--- a/2-python数据科学手册/chapter2-Numpy入门.ipynb
+++ b/2-python数据科学手册/chapter2-Numpy入门.ipynb
@@ -71,8 +71,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "创建/初始化数组"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
@@ -90,15 +99,15 @@
       " [3.14 3.14 3.14 3.14]]\n",
       "[ 0  2  4  6  8 10 12 14 16 18]\n",
       "[0.   0.25 0.5  0.75 1.  ]\n",
-      "[[0.60016773 0.28757066 0.49540969]\n",
-      " [0.05051597 0.04201667 0.59195548]\n",
-      " [0.75042609 0.79821835 0.7770913 ]]\n",
-      "[[ 1.30165422 -2.12965777 -0.63609374]\n",
-      " [-0.08480255  0.80809937 -0.4753884 ]\n",
-      " [-0.04616145  0.61332855 -0.52173647]]\n",
-      "[[3 0 5]\n",
-      " [5 0 7]\n",
-      " [3 4 7]]\n",
+      "[[0.1034855  0.85516839 0.6235035 ]\n",
+      " [0.43904312 0.63342752 0.74499625]\n",
+      " [0.82700403 0.78456296 0.7841846 ]]\n",
+      "[[ 1.43844269  0.44075279 -1.91670579]\n",
+      " [-1.23285644  0.14053027  1.08186948]\n",
+      " [ 0.41972062  1.03706336 -0.11519987]]\n",
+      "[[0 7 9]\n",
+      " [9 4 2]\n",
+      " [0 2 6]]\n",
       "[[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
       " [0. 0. 1.]]\n"
@@ -106,7 +115,6 @@
     }
    ],
    "source": [
-    "# 创建/初始化数组\n",
     "print(np.array([1, 2, 3, 4]))\n",
     "print(np.array([1, 2, 3, 4.]))\n",
     "print(np.array([1, 2 ,3, 4], dtype='float32'))\n",
@@ -123,8 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T12:15:23.851946400Z",
-     "start_time": "2023-10-22T12:15:23.843178100Z"
+     "end_time": "2023-10-22T12:21:36.507502600Z",
+     "start_time": "2023-10-22T12:21:36.496821800Z"
     }
    }
   },
